tests/golden/phase4a/compile-pass/iterator_all.rua
fn main() -> bool {
    (0..4).all(|value| value < 4)
}
