tests/golden/phase4a/compile-fail/iterator_map_arg_not_closure.rua
fn main() -> i64 {
    (0..4).map(42).count()
}
